[tool.poetry]
name = "fantasy_baseball_tools"
version = "1.0.0"
description = "Tools and automation to assist with managing a fantasy baseball team."
authors = ["Michael Knopf"]

packages = [
  {include = "*", from="src"},
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
